@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-22T16:19:58Z",
-  "count_outdated" : 476,
-  "uniques_outdated" : 271,
+  "timestamp" : "2022-08-23T01:44:45Z",
+  "count_outdated" : 477,
+  "uniques_outdated" : 272,
   "count" : 498,
   "uniques" : 289,
   "clones" : [
-    {
-      "timestamp": "2022-08-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 2,
